# kv-store

kv-store/: .dockerignore  .env  Cargo.toml  Dockerfile  Readme.md  cert.pem  key.pem
kv-store/db/node0/: db  snap.00000000000000DE
kv-store/db/node1/: db  snap.00000000000000D5  snap.00000000000000EC  snap.000000000000017A  snap.000000000000018A  snap.0000000000000212
kv-store/db/node2/: db  snap.0000000000000087  snap.0000000000000133  snap.0000000000000143  snap.00000000000001BB
kv-store/db/node3/: db
kv-store/kv_store.db/: db  snap.000000000000009E
kv-store/src/: config.rs  gprotocol.rs  hashring.rs  main.rs  recovery.rs  replication.rs  ring.rs  routes.rs  routes_resp.rs  wal.rs
kv-store/src/middleware/: mod.rs  types.rs
kv-store/yaml/: deployment.yaml  service.yaml
