[package]
name = "kv-store"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
chrono = "0.4.41"
metrics = "0.21"
metrics-exporter-prometheus = "0.11"
prometheus_exporter = "0.8.5"
sysinfo = "0.36.0"
